Google map is added, Zoom in and out working but resizable is not working...

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 <link rel="stylesheet" type="text/css" href="/static/styles.css">
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFzWD1wB7n5wsx5Z12LECxeciu9c-f0to&callback=initMap"
+  type="text/javascript"></script>
  
 
 
