--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<!doctype html>
 
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-   
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>Data Visualisation</title>
- </head>
-
-   <body>
-
-     <div id="app"></div>
-   </body>
-
- </html>
+ <link rel="stylesheet" type="text/css" href="/static/visual_main.css">
+ 
+  </head>
+  <body style=" background:rgb(0,0,0,.9)">
+  <div id="static_part">
+  <header id="main_head">
+  	<h3 id="app_name"> Data Visualisation</h3>
+  </header>
+    <div id="app"></div>
+   </div>
+  </body>
+</html>
