--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>Data Visualisation</title>
  <link rel="stylesheet" type="text/css" href="/static/visual_main.css">
- 
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFzWD1wB7n5wsx5Z12LECxeciu9c-f0to&callback=initMap"
+  type="text/javascript"></script>
   </head>
   <body style=" background:rgb(0,0,0,.9)">
   <div id="static_part">
