adding materialised vue

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>Data Visualisation</title>
- <link rel="stylesheet" type="text/css" href="/static/visual_main.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+ <link rel="stylesheet" type="text/css" href="/static/new.css">
+
  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFzWD1wB7n5wsx5Z12LECxeciu9c-f0to&callback=initMap"
   type="text/javascript"></script>
   </head>
-  <body style=" background:rgb(0,0,0,.9)">
-  <div id="static_part">
-  <header id="main_head">
-  	<h3 id="app_name"> Data Visualisation</h3>
-  </header>
+  <body >
+  
+  
     <div id="app"></div>
-   </div>
+   
   </body>
 </html>
